--- a/index.html
+++ b/index.html
@@ -14,17 +14,93 @@
     <div class="container">
         <div class="content">
         <img class="avatar" src="images/profilepicture.png" alt="Profile Picture">
-        <h1 class="HeaderTop">Parkpoom Sooksamran</h1>
-        <p class="job">Marketing Support Executive - Packaging & Own meadia (Website)</p>
+        <h1 class="name">Parkpoom Sooksamran</h1>
+        <p class="h1">PERSONAL DETAILS :</p>
+
+        <div class="personal-container">
+            <div class="personal-container1">
+        <p><b>Date of Birth :</b> April 23, 1990</p>
+        <P><b>Sex :</b> Male</P>
+        <p><b>Nationality :</b> Thai</p>
+        <p><b>Religion :</b> Buddhist</p>
+        <p><b>Marital Status :</b> Single</p>
+            </div>
+        </div>
+
+        <div class="line-border"></div> <!--เส้นแบ่ง pragraph-->
+
+        <div class="career-objective">
+            <p class="h1">CAREER OBJECTIVE :</p>
+        <!--<p class="job">Marketing Support Executive - Packaging & Own meadia (Website)</p>
         <p class="about"><b>I</b> am Commercial Executive with the work background as Graphic Design for Packaging, Take care of E-commerce and Website Developer.
             I enjoy both coding and design, 
-        </p>
+        </p>-->
+        </div>
+        
+        <div class="education"><!--การศึกษา-->
+            <p class="h1">EDUCATION :</p>
+        </div>
+
+        <div class="personality"><!--ลักษณะนิสัย-->
+            <p class="h1">PERSONALITY :</p>
+            <p>- Pleasant personality, good human relation and co-ordination</p>
+            <p>- Ability to perform well under pressure</p>
+            <p>- Good teamwork and enthusiastic</p>
+        </div>
+
+        <div class="working-and-training"><!--ประสบการณ์การทำงาน-->
+            <p class="h1">WORKING AND TRAINING EXPERIENCE :</p>
+            <p class="h3">4Care</p>
+            <p>- Designing and developing packaging of UHT and carton packaging by using packshot 3D and Mock-up.</p> <!---->
+            <p>- Coordinating with suppliers, co-packer and clients</p>
+            <p>- Designing and creating attractive visual displays for retail shops and outlets. (Banner POP Shelf Talker)</p>
+            <p>- Coordinating with marketing team and suppliers for developing and design suitable packaging also arranging delivery of packaging.</p>
+            <p>- Coordinating with marketing team for develop media and content marketing goals</p>
+            <p>- Checking artwork and printing according to target color approval.</p>
+            <p>- Preparing and developing “Approved packaging” system for internal using. </p>
+            <p>- Managing and editing contents on the website and E-commerce platforms (Lazada, Shopee, JD Central)</p>
+            <p>- Calculating container load for export goods via <b>CAPE PACK</b> according to logistic plan</p>
+        </div>
+
+        <div class="skill"><!--สกิล-->
+            <p class="h1">COMPUTER SKILL :</p>
+            <p>- ERP PLUS 2018 (Enterprise Resource Planning)</p>
+            <p>- Microsoft office (Word, Excel, PowerPoint</p>
+            <p>- Adobe Illustrator</p>
+            <p>- Adobe Photoshop</p>
+            <p>- Adobe Premiere Pro</p>
+            <P>- Adobe After Effect</P>
+            <p>- Adobe Light Room</p>
+            <p>- HTML, CSS via Visual Studio Code</p>
+            <p>- Wordpress</p>
+            <p>- 3Ds Max (Basic Skill)</p>
+
+        </div>
+
+        <div class="qualifications"><!--อื่น ๆ-->
+            <p class="h1">QUALIFICATIONS :</p>
+            <p>- Pleasant Personality, Good human relation and co-ordination</p>
+            <p>- Ability to perform well under pressure</p>
+            <p>- Good teamwork and enthusiastic</p>
+            <p>- Fast learner and Looking for Challenges</p>
+            <p>- Continual Improvement</p>
+        </div>
+
+        <div class="reference"><!--อื่น ๆ-->
+            <p class="h1">REFERENCE :</p>
+            <p>Available upon request</p>
+        </div>
+
+        <div class="contact-box">
+            <p class="address">398/142 Citysense(Ramintra), Phayasurain Rd.,</p>
+            <p class="address">Bangchan, Klongsamwa, Bangkok, 10510</p>
         <ul class="contact">
-            <li class="contact-item"><i class="far fa-envelope-open contact-icon"></i>E-mail : Aqual2iusz@gmail.com</li>
+            <li class="contact-item"><i class="far fa-envelope-open contact-icon"></i>E-mail : Parkpoom.sook@gmail.com</li>
             <li class="contact-item"><i class="fas fa-mobile-alt contact-icon"></i>Phone : 097 2949491</li>
             <li class="contact-item"><i class="fab fa-line contact-icon"></i>Line ID : aqual2iusz</li>
         </ul>
-        <a class="button" href="mailto:Aqual2iusz@gmail.com">Contract Me</a>
+        </div>
+        <a class="button" href="my-work.html">MY WORK</a>
         </div>
     </div>
     </body>
