--- a/index.html
+++ b/index.html
@@ -43,47 +43,47 @@
 
         <div class="personality"><!--ลักษณะนิสัย-->
             <p class="h1">PERSONALITY :</p>
-            <p>- Pleasant personality, good human relation and co-ordination</p>
-            <p>- Ability to perform well under pressure</p>
-            <p>- Good teamwork and enthusiastic</p>
+            <p class="space-p">- Pleasant personality, good human relation and co-ordination</p>
+            <p class="space-p">- Ability to perform well under pressure</p>
+            <p class="space-p">- Good teamwork and enthusiastic</p>
         </div>
 
         <div class="working-and-training"><!--ประสบการณ์การทำงาน-->
             <p class="h1">WORKING AND TRAINING EXPERIENCE :</p>
             <p class="h3">4Care</p>
-            <p>- Designing and developing packaging of UHT and carton packaging by using packshot 3D and Mock-up.</p> <!---->
-            <p>- Coordinating with suppliers, co-packer and clients</p>
-            <p>- Designing and creating attractive visual displays for retail shops and outlets. (Banner POP Shelf Talker)</p>
-            <p>- Coordinating with marketing team and suppliers for developing and design suitable packaging also arranging delivery of packaging.</p>
-            <p>- Coordinating with marketing team for develop media and content marketing goals</p>
-            <p>- Checking artwork and printing according to target color approval.</p>
-            <p>- Preparing and developing “Approved packaging” system for internal using. </p>
-            <p>- Managing and editing contents on the website and E-commerce platforms (Lazada, Shopee, JD Central)</p>
-            <p>- Calculating container load for export goods via <b>CAPE PACK</b> according to logistic plan</p>
+            <p class="space-p">- Designing and developing packaging of UHT and carton packaging by using packshot 3D and Mock-up.</p> <!---->
+            <p class="space-p">- Coordinating with suppliers, co-packer and clients</p>
+            <p class="space-p">- Designing and creating attractive visual displays for retail shops and outlets. (Banner POP Shelf Talker)</p>
+            <p class="space-p">- Coordinating with marketing team and suppliers for developing and design suitable packaging also arranging delivery of packaging.</p>
+            <p class="space-p">- Coordinating with marketing team for develop media and content marketing goals</p>
+            <p class="space-p">- Checking artwork and printing according to target color approval.</p>
+            <p class="space-p">- Preparing and developing “Approved packaging” system for internal using. </p>
+            <p class="space-p">- Managing and editing contents on the website and E-commerce platforms (Lazada, Shopee, JD Central)</p>
+            <p class="space-p">- Calculating container load for export goods via <b>CAPE PACK</b> according to logistic plan</p>
         </div>
 
         <div class="skill"><!--สกิล-->
             <p class="h1">COMPUTER SKILL :</p>
-            <p>- ERP PLUS 2018 (Enterprise Resource Planning)</p>
-            <p>- Microsoft office (Word, Excel, PowerPoint</p>
-            <p>- Adobe Illustrator</p>
-            <p>- Adobe Photoshop</p>
-            <p>- Adobe Premiere Pro</p>
-            <P>- Adobe After Effect</P>
-            <p>- Adobe Light Room</p>
-            <p>- HTML, CSS via Visual Studio Code</p>
-            <p>- Wordpress</p>
-            <p>- 3Ds Max (Basic Skill)</p>
+            <p class="space-p">- ERP PLUS 2018 (Enterprise Resource Planning)</p>
+            <p class="space-p">- Microsoft office (Word, Excel, PowerPoint</p>
+            <p class="space-p">- Adobe Illustrator</p>
+            <p class="space-p">- Adobe Photoshop</p>
+            <p class="space-p">- Adobe Premiere Pro</p>
+            <P class="space-p">- Adobe After Effect</P>
+            <p class="space-p">- Adobe Light Room</p>
+            <p class="space-p">- HTML, CSS via Visual Studio Code</p>
+            <p class="space-p">- Wordpress</p>
+            <p class="space-p">- 3Ds Max (Basic Skill)</p>
 
         </div>
 
         <div class="qualifications"><!--อื่น ๆ-->
             <p class="h1">QUALIFICATIONS :</p>
-            <p>- Pleasant Personality, Good human relation and co-ordination</p>
-            <p>- Ability to perform well under pressure</p>
-            <p>- Good teamwork and enthusiastic</p>
-            <p>- Fast learner and Looking for Challenges</p>
-            <p>- Continual Improvement</p>
+            <p class="space-p">- Pleasant Personality, Good human relation and co-ordination</p>
+            <p class="space-p">- Ability to perform well under pressure</p>
+            <p class="space-p">- Good teamwork and enthusiastic</p>
+            <p class="space-p">- Fast learner and Looking for Challenges</p>
+            <p class="space-p">- Continual Improvement</p>
         </div>
 
         <div class="reference"><!--อื่น ๆ-->
